fixed some issues on mobile screens

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-    max-width: 100%;
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
     background: linear-gradient(#343133, #9198e5);
+
 }
 
 .container {
-    width: 500px;
-    margin: 130px auto;
+    width: 400px;
+    margin: 40px auto;
     background-color: aliceblue;
     padding: 20px;
     display: flex;
@@ -25,7 +25,7 @@ img {
     width: 279px;
     height: 330px;
     padding: 40px;
-    border-radius: 200px;
+    border-radius: 300px;
     display:none;
   
 }
@@ -50,6 +50,22 @@ button:hover {
 
 #hero-display {
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
 }
 
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+  .container {
+        width: 300px;
+  }
+
+  img {
+    width: 140px;
+    height: 200px;
+    padding: 40px;
+    border-radius: 200px;
+    display:none;
+  
+}
+  }
